# my-blog-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  dev.sh  fly.toml  playground.ipynb  pyproject.toml
docs/: sharing.md
src/: app.py  memory.py  memory_repository.py  memory_services.py  paths.py  services.py  tags.py
src/account_management/: account_repository.py  services.py
src/api/: auth_router.py  fragment_router.py  memory_router.py  public_router.py  service_manager.py  sharing_router.py
src/entities/: account.py  memory.py  user.py
src/events/: event_defs.py  file_storage_event_handler.py  storage_subscriber.py
src/fragments/: base.py  file.py  rss.py  text.py
src/memories/: README.md  file_storage_event_handler.py  memory_repository.py  services.py
src/sharing/: README.md  api.cedarschema  authorise.py  events.py  exceptions.py  permissions_event_handler.py  permissions_manager.py  policies.cedar  resource_repository.py  resources.py  services.py  user_repository.py
src/utils/: authorise.py  background_tasks.py  logging_adapter.py  mixins.py  network.py  ping_supabase.py  rss_parser.py
test/: conftest.py  fixtures.py  rss.xml  test_account.py  test_background_tasks.py  test_fragment.py  test_memories_services.py  test_memory.py  test_memory_repository.py  test_rss_parser.py  test_s3_subscriber.py  test_services.py  test_sharing_services.py
test/api/: test_memory_api.py
test/file_storage/: test_fake_storage.py  test_s3_storage.py  test_supabase_storage.py
test/sharing/: conftest.py  test_permissions_event_handler.py  (+2 more)
(+16 files in other folders)
