[project]
name = "me"
version = "0.1.0"
description = "A box of memories"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.21.1",
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "supabase>=2.15.1",
]

[dependency-groups]
dev = [
    "openapi-generator-cli[jdk4py]>=7.13.0.post0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-httpx>=0.35.0",
    "ruff>=0.11.7",
    "types-aiobotocore[aiobotocore]>=2.21.1",
    "uvicorn>=0.34.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov --cov-report html"


[tool.ruff]
line-length = 79
